# FRIDAY

./: .gitignore  README.md  hello.py  models.txt  pyproject.toml  requirements.txt
src/: bot.py  buy_agent.py  dependencies.py  payment_agent.py  payment_bot.py  sales_agent.py  support_agent.py  test.py  webhook.py
