[project]
name = "friday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.4",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]
