[project]
name = "friday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.5",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "razorpay>=2.0.1",
]
